Formatação de Pipes e Pipes customizados

--- a/src/app/segundo-componente/segundo-componente.component.html
+++ b/src/app/segundo-componente/segundo-componente.component.html
@@ -1,2 +1,3 @@
 <h3> Aprofundando os conhecimentos em templates </h3>
 <p>{{ nome | lowercase }}</p>
+<p>Data de nascimento: {{ dataNascimento | date:"dd/MM/yyyy"}}</p>
